--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
@@ -270,24 +270,25 @@
   requiredTags:
   - CP14DemiplanUnderground
   layers:
-    - !type:EntityTableDunGen
+    - !type:MobsDunGen
       minCount: 5
-      maxCount: 10
-      table: !type:GroupSelector
-        children:
-        - id: CP14MobXenoDrone
-        - id: CP14MobXeno
+      maxCount: 8
+      groups:
+      - id: CP14MobXenoDrone
+        amount: 1
+      - id: CP14MobXeno
+        amount: 1
 
 - type: cp14DemiplaneModifier
   id: EnemyZombie
   difficulty: 0.4
   layers:
-    - !type:EntityTableDunGen
-      minCount: 5
-      maxCount: 10
-      table: !type:GroupSelector
-        children:
-        - id: CP14SpawnMobUndeadZombie
+    - !type:MobsDunGen
+      minCount: 3
+      maxCount: 6
+      groups:
+      - id: CP14SpawnMobUndeadZombie
+        amount: 1
 
 - type: cp14DemiplaneModifier
   id: EnemyDyno
@@ -306,14 +307,16 @@
   id: EnemySnakes
   difficulty: 0.7
   layers:
-    - !type:EntityTableDunGen
+    - !type:MobsDunGen
       minCount: 3
       maxCount: 6
-      table: !type:GroupSelector
-        children:
-        - id: CP14MobPurpleSnake
-        - id: CP14MobSmallPurpleSnake
-        - id: CP14MobSpaceCobra
+      groups:
+      - id: CP14MobPurpleSnake
+        amount: 1
+      - id: CP14MobSmallPurpleSnake
+        amount: 1
+      - id: CP14MobSpaceCobra
+        amount: 1
 
 - type: cp14DemiplaneModifier
   id: EnemyMagmawind
