--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grass_geode.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grass_geode.yml
@@ -15,7 +15,7 @@
 - type: dungeonConfig
   id: CP14DemiplaneGrassGeode
   layers:
-    # Masks (from center to border!)
+    # Masks
     - !type:PrototypeDunGen
       proto: CP14DemiplaneGrassGeodeFloorMaskBorder
     - !type:PrototypeDunGen
@@ -24,28 +24,19 @@
       proto: CP14DemiplaneGrassGeodeFloorMaskAir
     - !type:PrototypeDunGen
       proto: CP14DemiplaneGrassGeodeFloorMaskWater
-    # Enter and Exit
-    - !type:MobsDunGen
-      minCount: 1
-      maxCount: 1
-      groups:
-      - id: CP14DemiplanEnterRoomMarker
-        amount: 1
-    # Biome Spawner fills (from border to center!) order is very important! For inexplicable reasons, only a certain sequence works!
+    # Biomes
     - !type:PrototypeDunGen
       proto: CP14ExpeditionCavesFillBorder
-    - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrassGeodeFillGrass
-    - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFillCave
+    - !type:BiomeDunGen
+      biomeTemplate: CP14GrasslandTestResult
+      tileMask:
+      - CP14FloorGrass
+    - !type:BiomeDunGen
+      biomeTemplate: CP14CavesGeneric
+      tileMask:
+      - CP14FloorSand
     - !type:PrototypeDunGen
       proto: CP14DemiplaneGrassGeodeFillWater
-    - !type:MobsDunGen
-      minCount: 2
-      maxCount: 2
-      groups:
-      - id: CP14DemiplanePassway
-        amount: 1
 
 - type: dungeonConfig
   id: CP14DemiplaneGrassGeodeFloorMaskWater
@@ -118,17 +109,6 @@
         octaves: 5
         lacunarity: 2
         gain: 0.5
-
-- type: dungeonConfig
-  id: CP14DemiplaneGrassGeodeFillGrass
-  reserveTiles: true
-  data:
-    entities:
-      Fill: CP14BiomeSpawnerGrassland
-  layers:
-  - !type:FillGridDunGen
-    allowedTiles:
-    - CP14FloorGrass
 
 - type: dungeonConfig
   id: CP14DemiplaneGrassGeodeFillWater
