--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
@@ -43,37 +43,22 @@
 - type: dungeonConfig
   id: CP14ExpeditionGrasslandIsland
   layers:
-    # Masks (from center to border!)
+    # Masks
     - !type:PrototypeDunGen
       proto: CP14ExpeditionGrasslandIslandFloorMaskSand
     - !type:PrototypeDunGen
       proto: CP14ExpeditionGrasslandIslandFloorMaskGrass
     - !type:PrototypeDunGen
       proto: CP14ExpeditionGrasslandIslandFloorMaskStone
-    # Exterior rooms
-    #- !type:EntityTableDunGen
-    #  minCount: 1
-    #  maxCount: 2
-    #  table:
-    #    id: CP14GrasslandIslandExteriorRoomSpawner
-    # Enter and Exit
-    - !type:MobsDunGen
-      minCount: 1
-      maxCount: 1
-      groups:
-      - id: CP14DemiplanEnterRoomMarker
-        amount: 1
-    # Biome Spawner fills (from border to center!) order is very important! For inexplicable reasons, only a certain sequence works!
-    - !type:PrototypeDunGen
-      proto: CP14ExpeditionGrasslandIslandFillGrassland
-    - !type:PrototypeDunGen
-      proto: CP14ExpeditionGrasslandIslandFillCave
-    - !type:MobsDunGen
-      minCount: 2
-      maxCount: 2
-      groups:
-      - id: CP14DemiplanePassway
-        amount: 1
+    # Biomes
+    - !type:BiomeDunGen
+      biomeTemplate: CP14CavesGeneric
+      tileMask:
+      - CP14FloorBase
+    - !type:BiomeDunGen
+      biomeTemplate: CP14GrasslandTestResult
+      tileMask:
+      - CP14FloorGrass
 
 - type: dungeonConfig
   id: CP14ExpeditionGrasslandIslandFloorMaskStone
@@ -128,25 +113,3 @@
         octaves: 5
         lacunarity: 2
         gain: 0.5
-
-- type: dungeonConfig
-  id: CP14ExpeditionGrasslandIslandFillGrassland
-  reserveTiles: true
-  data:
-    entities:
-      Fill: CP14BiomeSpawnerGrassland
-  layers:
-  - !type:FillGridDunGen
-    allowedTiles:
-    - CP14FloorGrass
-
-- type: dungeonConfig
-  id: CP14ExpeditionGrasslandIslandFillCave
-  reserveTiles: true
-  data:
-    entities:
-      Fill: CP14BiomeSpawnerCave
-  layers:
-  - !type:FillGridDunGen
-    allowedTiles:
-    - CP14FloorBase
