--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves.yml
@@ -1,27 +1,27 @@
 - type: cp14DemiplaneLocation
   id: T1Caves
-  locationConfig: CP14ExpeditionCaves
+  locationConfig: CP14DemiplaneCaves
   tags:
-  - CP14DemiplanOre
-  - CP14DemiplanUnderground
+  - CP14DemiplaneCave
+  - CP14DemiplaneUnderground
   components:
   - type: CP14WeatherController
     entries:
     - visuals: CP14Mist
 
 - type: dungeonConfig
-  id: CP14ExpeditionCaves
+  id: CP14DemiplaneCaves
   layers:
     # Masks
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFloorMaskBorder
+      proto: CP14DemiplaneCavesFloorMaskBorder
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFloorMaskStone
+      proto: CP14DemiplaneCavesFloorMaskStone
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFloorMaskAir
+      proto: CP14DemiplaneCavesFloorMaskAir
     # Biomes
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFillBorder
+      proto: CP14DemiplaneCavesFillBorder
     - !type:BiomeDunGen
       biomeTemplate: CP14CavesGeneric
       tileMask:
@@ -32,43 +32,7 @@
       - CP14FloorGrass
 
 - type: dungeonConfig
-  id: CP14ExpeditionCavesFloorMaskAir
-  layers:
-  - !type:NoiseDistanceDunGen
-    size: 80, 80
-    distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.5
-    layers:
-    - tile: CP14FloorGrass
-      threshold: 0.50
-      noise:
-        frequency: 0.030
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        octaves: 5
-        lacunarity: 2
-        gain: 0.5
-
-- type: dungeonConfig
-  id: CP14ExpeditionCavesFloorMaskStone
-  layers:
-  - !type:NoiseDistanceDunGen
-    size: 120, 120
-    distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.9
-    layers:
-    - tile: CP14FloorSand
-      threshold: 0.50
-      noise:
-        frequency: 0.010
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        octaves: 5
-        lacunarity: 2
-        gain: 0.5
-
-- type: dungeonConfig
-  id: CP14ExpeditionCavesFloorMaskBorder
+  id: CP14DemiplaneCavesFloorMaskBorder
   layers:
   - !type:NoiseDistanceDunGen
     size: 130, 130
@@ -86,7 +50,43 @@
         gain: 0.5
 
 - type: dungeonConfig
-  id: CP14ExpeditionCavesFillBorder
+  id: CP14DemiplaneCavesFloorMaskStone
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 120, 120
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 0.9
+    layers:
+    - tile: CP14FloorSand
+      threshold: 0.50
+      noise:
+        frequency: 0.010
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14DemiplaneCavesFloorMaskAir
+  layers:
+  - !type:NoiseDistanceDunGen
+    size: 80, 80
+    distanceConfig: !type:DunGenEuclideanSquaredDistance
+      blendWeight: 0.5
+    layers:
+    - tile: CP14FloorGrass
+      threshold: 0.50
+      noise:
+        frequency: 0.030
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        octaves: 5
+        lacunarity: 2
+        gain: 0.5
+
+- type: dungeonConfig
+  id: CP14DemiplaneCavesFillBorder
   reserveTiles: true
   data:
     entities:
