--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
@@ -1,44 +1,44 @@
-- type: cp14DemiplaneLocation
-  id: T1GrasslandIsland
-  locationConfig: CP14ExpeditionGrasslandIsland
-  tags:
-  - CP14DemiplanOre
-  - CP14DemiplanOpenSky
-  - CP14DemiplanGrass
-  components:
-  - type: MapLight
-    ambientLightColor: "#BFEEFFFF"
-  - type: CP14MapFloorOccluder
-  - type: Parallax
-    parallax: CP14Ocean
-  - type: CP14CloudShadows
-  - type: CP14WeatherController
-    entries:
-    - visuals: CP14Rain
-    - visuals: CP14Storm
-    - visuals: CP14Mist
-  - type: CP14DayCycle
-    timeEntries:
-    - duration: 80
-      color: '#754A4AFF'
-    - duration: 80
-      color: '#E0BA87FF'
-    - duration: 80
-      color: '#BFEEFFFF'
-    - period: Night
-      duration: 80
-      color: '#385163FF'
-    - period: Night
-      duration: 80
-      color: '#060D12FF'
-    - period: Night
-      duration: 80
-      color: '#000000FF'
-    - period: Night
-      duration: 80
-      color: '#000000FF'
-    - duration: 80
-      color: '#120906FF'
+#- type: cp14DemiplaneLocation
+#  id: T1GrasslandIsland
+#  locationConfig: CP14ExpeditionGrasslandIsland
+#  tags:
+#  - CP14DemiplaneCave
+#  - CP14DemiplaneOpenSky
+#  - CP14DemiplaneGrass
+#  components:
+#  - type: MapLight
+#    ambientLightColor: "#BFEEFFFF"
+#  - type: CP14MapFloorOccluder
+#  - type: Parallax
+#    parallax: CP14Ocean
+#  - type: CP14CloudShadows
+#  - type: CP14WeatherController
+#    entries:
+#    - visuals: CP14Rain
+#    - visuals: CP14Storm
+#    - visuals: CP14Mist
+#  - type: CP14DayCycle
+#    timeEntries:
+#    - duration: 80
+#      color: '#754A4AFF'
+#    - duration: 80
+#      color: '#E0BA87FF'
+#    - duration: 80
+#      color: '#BFEEFFFF'
+#    - period: Night
+#      duration: 80
+#      color: '#385163FF'
+#    - period: Night
+#      duration: 80
+#      color: '#060D12FF'
+#    - period: Night
+#      duration: 80
+#      color: '#000000FF'
+#    - period: Night
+#      duration: 80
+#      color: '#000000FF'
+#    - duration: 80
+#      color: '#120906FF'
 
 - type: dungeonConfig
   id: CP14ExpeditionGrasslandIsland
