--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/required_layers.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/required_layers.yml
@@ -1,15 +1,17 @@
 - type: dungeonConfig
   id: DemiplaneConnections
   layers:
-    - !type:EntityTableDunGen
-      minCount: 1
-      maxCount: 1
-      table: !type:GroupSelector
-        children:
-        - id: CP14DemiplanEnterRoomMarker
-    - !type:EntityTableDunGen
-      minCount: 2
-      maxCount: 2
-      table: !type:GroupSelector
-        children:
-        - id: CP14DemiplanePassway
+    - !type:OreDunGen
+      entityMask: 
+      - CP14WallStone
+      entity: CP14DemiplanEnterRoomMarker
+      count: 1
+      minGroupSize: 1
+      maxGroupSize: 1
+    - !type:OreDunGen
+      entityMask: 
+      - CP14WallStone
+      entity: CP14DemiplanePassway
+      count: 2
+      minGroupSize: 1
+      maxGroupSize: 1
