--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/test.yml
@@ -246,22 +246,23 @@
   difficulty: 0.4
   generationWeight: 0.25
   layers:
-    - !type:OreDunGen
-      entity: LandMineExplosive
-      count: 10
-      minGroupSize: 1
-      maxGroupSize: 3
+    - !type:MobsDunGen
+      minCount: 25
+      maxCount: 50
+      groups:
+      - id: LandMineExplosive
+        amount: 1
 
 - type: cp14DemiplaneModifier
   id: CommonLoot
   reward: 0.25
   generationWeight: 2
   layers:
-    - !type:OreDunGen
-      entity: CP14SpawnerExpeditionLootCommon
-      count: 10
-      minGroupSize: 1
-      maxGroupSize: 3
+    - !type:EntityTableDunGen
+      minCount: 15
+      maxCount: 30
+      table: !type:NestedSelector
+        tableId: CP14TableExpeditionLootCommon
 
 - type: cp14DemiplaneModifier
   id: EnemyXeno
@@ -270,8 +271,8 @@
   - CP14DemiplanUnderground
   layers:
     - !type:MobsDunGen
-      minCount: 5
-      maxCount: 8
+      minCount: 2
+      maxCount: 3
       groups:
       - id: CP14MobXenoDrone
         amount: 1
@@ -307,8 +308,8 @@
   difficulty: 0.7
   layers:
     - !type:MobsDunGen
-      minCount: 3
-      maxCount: 6
+      minCount: 1
+      maxCount: 2
       groups:
       - id: CP14MobPurpleSnake
         amount: 1
