--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/cure_wounds.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/cure_wounds.yml
@@ -4,7 +4,7 @@
   description: You touch the creature, healing its body from physical damage
   components:
   - type: CP14MagicEffect
-    manaCost: 15
+    manaCost: 20
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
@@ -21,8 +21,16 @@
             Slash: -10
             Blunt: -10
             Piercing: -10
+            Poison: -10
+            Caustic: -10
+            Cold: -10
             Heat: -10
+            Shock: -10
+            Asphyxiation: -50
+            Bloodloss: -10
       - !type:Jitter
+      - !type:ModifyBleedAmount
+      - !type:ModifyBloodLevel
   - type: CP14MagicEffectVerbalAspect
     startSpeech: "Et curabuntur..."
     endSpeech: "vulnera tua"
