--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
@@ -2,9 +2,9 @@
   id: T1GrasslandIsland
   locationConfig: CP14ExpeditionGrasslandIsland
   tags:
-  - CP14DemiplanOre
-  - CP14DemiplanOpenSky
-  - CP14DemiplanGrass
+  - CP14DemiplaneCave
+  - CP14DemiplaneOpenSky
+  - CP14DemiplaneGrass
   components:
   - type: MapLight
     ambientLightColor: "#BFEEFFFF"
