--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grass_geode.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grass_geode.yml
@@ -2,9 +2,9 @@
   id: T1GrassGeode
   locationConfig: CP14DemiplaneGrassGeode
   tags:
-  - CP14DemiplanOre
-  - CP14DemiplanGrass
-  - CP14DemiplanUnderground
+  - CP14DemiplaneCave
+  - CP14DemiplaneGrass
+  - CP14DemiplaneUnderground
   components:
   - type: CP14WeatherController
     entries:
@@ -17,7 +17,7 @@
   layers:
     # Masks
     - !type:PrototypeDunGen
-      proto: CP14DemiplaneGrassGeodeFloorMaskBorder
+      proto: CP14DemiplanePlatingMaskBorder
     - !type:PrototypeDunGen
       proto: CP14DemiplaneGrassGeodeFloorMaskStone
     - !type:PrototypeDunGen
@@ -25,8 +25,10 @@
     - !type:PrototypeDunGen
       proto: CP14DemiplaneGrassGeodeFloorMaskWater
     # Biomes
-    - !type:PrototypeDunGen
-      proto: CP14ExpeditionCavesFillBorder
+    - !type:BiomeDunGen
+      biomeTemplate: CP14CavesIndestructibleFill
+      tileMask:
+      - Plating
     - !type:BiomeDunGen
       biomeTemplate: CP14GrasslandTestResult
       tileMask:
