--- a/Resources/Prototypes/_CP14/ai_factions.yml
+++ b/Resources/Prototypes/_CP14/ai_factions.yml
@@ -4,6 +4,7 @@
   - CP14AggressiveAnimals
   - CP14Undead
   - CP14HostileEveryone
+  - CP14Monster
 
 - type: npcFaction
   id: CP14HostileEveryone
@@ -12,6 +13,7 @@
   - CP14Undead
   - CP14PeacefulAnimals
   - CP14AggressiveAnimals
+  - CP14Monster
 
 - type: npcFaction
   id: CP14Undead
@@ -29,4 +31,13 @@
   hostile:
   - CP14Adventurers
   - CP14Undead
+  - CP14PeacefulAnimals
+  - CP14Monster
+
+- type: npcFaction
+  id: CP14Monster
+  hostile:
+  - CP14Adventurers
+  - CP14HostileEveryone
+  - CP14AggressiveAnimals
   - CP14PeacefulAnimals
